--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: 0.16.0-dev.2535+b5bd49460
           
     - name: Build project
       run: zig build
@@ -55,7 +55,7 @@ jobs:
     - name: Setup Zig
       uses: mlugg/setup-zig@v2
       with:
-        version: 0.15.2
+        version: 0.16.0-dev.2535+b5bd49460
 
     - name: Download build artifacts
       uses: actions/download-artifact@v4
